Begin en Eindpunten van 10 deeltjes en sneller maken tijd

--- a/Content/PySim/1_intro_sim.ipynb
+++ b/Content/PySim/1_intro_sim.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "2231e465-3cdf-436d-97d3-c8a6ff189377",
    "metadata": {},
    "outputs": [
@@ -417,21 +417,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dit kostte  2.275266170501709 seconde!\n",
-      "Dit kostte  0.005589485168457031 seconde!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "To https://github.com/Monjano/Practicum-2-Monjano-en-Oscar.git\n",
-      " ! [rejected]        main -> main (non-fast-forward)\n",
-      "error: failed to push some refs to 'https://github.com/Monjano/Practicum-2-Monjano-en-Oscar.git'\n",
-      "hint: Updates were rejected because the tip of your current branch is behind\n",
-      "hint: its remote counterpart. If you want to integrate the remote changes,\n",
-      "hint: use 'git pull' before pushing again.\n",
-      "hint: See the 'Note about fast-forwards' in 'git push --help' for details.\n"
+      "Dit kostte  2.263394355773926 seconde!\n",
+      "Dit kostte  0.0059812068939208984 seconde!\n"
      ]
     }
    ],
@@ -462,8 +449,7 @@
     "eind = time.time()\n",
     "\n",
     "lengte = eind - start\n",
-    "print(\"Dit kostte \", lengte, \"seconde!\")\n",
-    "!git push"
+    "print(\"Dit kostte \", lengte, \"seconde!\")\n"
    ]
   },
   {
